# aoc

./: .python-version  LICENSE  README.md
2018/rust/: README.md
2018/rust/day01/src/: main.rs
2018/rust/day02/: Cargo.toml
2018/rust/day02/src/: main.rs
2018/rust/day03/: Cargo.toml
2018/rust/day03/input/: input.txt
2018/rust/day03/src/: main.rs
2018/rust/day04/: Cargo.toml
2018/rust/day04/src/: main.rs
2018/rust/day05/: Cargo.toml
2018/rust/day05/src/: main.rs
2018/rust/day06/: Cargo.toml
2018/rust/day06/src/: main.rs
2018/rust/day07/: Cargo.toml
2018/rust/day07/src/: main.rs
2020/: README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  utils.py
2020/rust/: Cargo.toml  README.md
2020/rust/day3/src/: main.rs
2020/rust/day4/: Cargo.toml
2020/rust/day4/src/: main.rs
2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
2022/advtools/: Cargo.toml
2022/advtools/src/: grid.rs  input.rs  lib.rs
2022/rust/: Cargo.toml  README.md
2023/rust/: Cargo.toml  README.md  new.sh
2023/rust/input/: day06.txt  day07.txt  day10.txt
