[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bitvec = "1.0.1"
derive_more = { version = "0.99.17", default-features = false, features = ["add"] }
im = "15.1.0"
indoc = "1.0.7"
itertools = "0.10.5"
multimap = "0.8.3"
peg = "0.8.1"
thiserror = "1.0.37"
