[package]
name = "advtools"
description = "A prelude to reduce boilerplate of 'Advent of Code' like challenges."
version = "0.8.0"
authors = ["Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/birkenfeld/advtools"
edition = "2021"

[dependencies]
itertools = "0.10.1"
hashbrown = "0.13.1"
arrayvec = "0.7.1"
rayon = "1.5.1"
regex = "1.4.2"
num = "0.4.0"
odds = { version = "0.4.0", features = ["std-string", "std-vec"] }
